--- a/pokeno-piano-studio/src/index.css
+++ b/pokeno-piano-studio/src/index.css
@@ -1,6 +1,6 @@
 @import url('https://fonts.googleapis.com/css2?family=Quicksand:wght@300;400;500;600;700&display=swap');
 @import url("https://fonts.googleapis.com/css2?family=Dancing+Script&display=swap");
-
+@import '~bootstrap/dist/css/bootstrap.min.css';
 
 /* base styles */
 * {
